--- a/milestone1/css/_partials/common.css
+++ b/milestone1/css/_partials/common.css
@@ -6,4 +6,12 @@ COMMON
 
 body {
     font-family: 'Lato', sans-serif;
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 100vh;
+}
+
+.body-top {
+    background-color: var(--body-top);
+    width: 100%;
+    height: 15%;
 }
