--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -15,7 +15,7 @@ BODY
 */
 
 .big-container {
-    background-color: red;
+    background-color: white;
     height: 95vh;
     z-index: 99;
     position: fixed;
@@ -24,4 +24,21 @@ BODY
     right: 5%;
     max-width: 86.25rem;
     margin: 0 auto;
+    display: flex;
+}
+
+/* left side */
+
+.left-side {
+    border: 1px solid black;
+    width: 35%;
+    height: 100%;
+}
+
+/* righ side */
+
+.right-side {
+    border: 1px solid black;
+    width: 65%;
+    height: 100%;
 }
