--- a/milestone1/css/_partials/variables.css
+++ b/milestone1/css/_partials/variables.css
@@ -8,4 +8,6 @@ VARIABLES
     --body-top: #009788;
     --header: #eaeaea;
     --icons: #b1b1b1;
+    --notifications: #8edafc;
+    --alternative-font: #797979;
 }
