--- a/milestone1/css/_partials/common.css
+++ b/milestone1/css/_partials/common.css
@@ -17,7 +17,7 @@ body {
 .body-top {
     background-color: var(--body-top);
     width: 100%;
-    height: 15%;
+    height: 11%;
 }
 
 .flex {
@@ -53,4 +53,14 @@ i {
 
 ul {
     list-style: none;
+    padding: 0;
+}
+
+.font-bold {
+    font-weight: bold;
+}
+
+.small-grey {
+    font-size: .875rem;
+    color: var(--alternative-font);
 }
