feat: right side

--- a/milestone1/css/_partials/variables.css
+++ b/milestone1/css/_partials/variables.css
@@ -6,7 +6,7 @@ VARIABLES
 
 :root {
     --body-top: #009788;
-    --header: #eaeaea;
+    --header-footer: #eaeaea;
     --icons: #b1b1b1;
     --notifications: #8edafc;
     --alternative-font: #797979;
