--- a/milestone1/css/_partials/common.css
+++ b/milestone1/css/_partials/common.css
@@ -25,7 +25,7 @@ body {
 }
 
 header {
-    background-color: var(--header);
+    background-color: var(--header-footer);
     justify-content: space-between;
     align-items: center;
     width: 100%;
