--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -41,6 +41,9 @@ left side
 }
 
 /* header  */
+.left-header {
+    border-right: 1px solid var(--icons);
+}
 
 .user-container {
     align-items: center;
@@ -147,10 +150,32 @@ righ side
 
 .right-side main {
     flex-grow: 1;
-    background-color: red;
+    background-image: url('../img/mine.jpg');
     overflow-y: scroll;
 }
 
+/* footer */
+
 .right-side footer {
     height: 4.375rem;
+    justify-content: space-between;
+    align-items: center;
+    padding: .625rem 0;
+    background-color: var(--header-footer);
+}
+
+.right-side footer i {
+    margin: 0 2.1875rem;
+}
+
+.right-side footer .footer-center {
+    flex-grow: 1;
+    height: 100%;
+}
+
+.footer-center input {
+    width: 100%;
+    height: 100%;
+    padding-left: 1.25rem;
+    border-radius: .3125rem;
 }
