fix: chat border and icon color

--- a/milestone1/css/_partials/variables.css
+++ b/milestone1/css/_partials/variables.css
@@ -11,4 +11,5 @@ VARIABLES
     --notifications: #8edafc;
     --alternative-font: #797979;
     --search-bar: #fbfbfd;
+    --footer-icon: #70706e;
 }
